--- a/rostislove/stylesheets/responsive.css
+++ b/rostislove/stylesheets/responsive.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 1020px) {
   article > img,
+  article > iframe,
   .galleryRail img {
     width: 100%;
   }
@@ -34,6 +35,10 @@
   .galleryRail figure {
     width: 100%;
     min-width: 100%;
+  }
+
+  article > iframe {
+    height: 190px;
   }
 }
 
