--- a/rostislove/stylesheets/style.css
+++ b/rostislove/stylesheets/style.css
@@ -2,8 +2,14 @@
 
 @import 'reset.css';
 @import 'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic';
+
 @import 'layout.css';
 @import 'content.css';
+
+/* index */
+@import "index.css";
+
+/* post */
 @import 'sidebar.css';
 @import 'menubar.css';
 @import 'gallery.css';
