--- a/rostislove/stylesheets/style.css
+++ b/rostislove/stylesheets/style.css
@@ -2,12 +2,14 @@
 
 @import 'reset.css';
 @import 'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic';
+@import 'social-likes_birman.css'; /* social share */
 
 @import 'layout.css';
 @import 'content.css';
+@import 'share.css';
 
 /* index */
-@import "index.css";
+@import "posts.css";
 
 /* post */
 @import 'sidebar.css';
