--- a/rostislove/stylesheets/layout.css
+++ b/rostislove/stylesheets/layout.css
@@ -12,3 +12,11 @@ a:visited {
   color: inherit;
   text-decoration: none;
 }
+
+body.posts > .menubar {
+  position: fixed;
+  width: 100%;
+  padding: 30px;
+  background-color: white;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+}
