--- a/rostislove/stylesheets/menubar.css
+++ b/rostislove/stylesheets/menubar.css
@@ -11,3 +11,12 @@
   height: 16px;
   background-image: url("../images/wikimedium_logo.svg");
 }
+.about {
+  font-size: 14px;
+  line-height: 50px;
+  color: rgba(255, 0, 0, 0.2);
+  transition: all .1s ease;
+}
+.about:hover {
+  color: rgba(255, 0, 0, 0.4);
+}
