--- a/rostislove/stylesheets/posts.css
+++ b/rostislove/stylesheets/posts.css
@@ -1,19 +1,29 @@
+body.posts {
+  background-color: #FAFAFA  ;
+}
+
+.postsFeed {
+  padding: 80px 0 30px;
+}
 
 .postsFeed a {
   display: block;
   width: 740px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 20px;
-  background-color: rgba(255, 0, 0, 0.5);
+  background-color: white;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
+  border-radius: 5px;
 }
+
 .postsFeed figure {
   width: 700px;
   height: 200px;
   margin-bottom: 22px;
-  background-image: url(../images/narkomfin.jpg);
   background-size: cover;
   background-position: center;
 }
+
 .postsFeed h2 {
   margin-top: 9px;
   font-family: 'PT Sans Caption', sans-serif;
