--- a/rostislove/stylesheets/sidebar.css
+++ b/rostislove/stylesheets/sidebar.css
@@ -4,7 +4,7 @@
   top: 46px;
   left: 20px;
   box-sizing: border-box;
-  transition: all .1s ease-out;
+  transition: all .1s ease;
   z-index: 1;
 }
 
