--- a/rostislove/stylesheets/layout.css
+++ b/rostislove/stylesheets/layout.css
@@ -13,10 +13,13 @@ a:visited {
   text-decoration: none;
 }
 
-body.posts > .menubar {
-  position: fixed;
-  width: 100%;
-  padding: 30px;
+body.posts .menubar,
+body.landing .menubar {
   background-color: white;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: 768px;
 }
