--- a/rostislove/stylesheets/layout.css
+++ b/rostislove/stylesheets/layout.css
@@ -7,8 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-a,
-a:visited {
+a {
   color: inherit;
   text-decoration: none;
 }
