--- a/rostislove/stylesheets/ui.css
+++ b/rostislove/stylesheets/ui.css
@@ -31,7 +31,7 @@
   line-height: 50px;
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1180px) and (min-width: 911px) {
   .small {
     width: 180px;
     height: 30px;
