--- a/rostislove/stylesheets/layout.css
+++ b/rostislove/stylesheets/layout.css
@@ -11,14 +11,23 @@ a {
   color: inherit;
   text-decoration: none;
 }
+body.posts
+body.landing  {
+  background-color: ;
+}
 
 body.posts .menubar,
 body.landing .menubar {
-  background-color: white;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   min-width: 768px;
+  z-index: 1;
+}
+
+body.posts .menubar,
+body.landing .menubar div {
+  background-color: white;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
 }
