--- a/rostislove/stylesheets/landing.css
+++ b/rostislove/stylesheets/landing.css
@@ -7,6 +7,7 @@ body.bg {
   background-position: top center;
 }
 body.landing * {
+  -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
 body.landing .menubar div {
@@ -20,9 +21,16 @@ body.landing .menubar div {
 
 .landingWrapper {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
   width: 1440px;
   margin: 0 auto;
@@ -70,7 +78,6 @@ body.landing .menubar div {
 }
 .mainSection.center section {
   width: 100%;
-  top: 182px;
 }
 
 .mainSection section figure {
