--- a/rostislove/stylesheets/menubar.css
+++ b/rostislove/stylesheets/menubar.css
@@ -2,9 +2,15 @@
   width: 100%;
 }
 .menubar div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 50px;
   padding: 20px;
 }
@@ -17,6 +23,7 @@
 .about {
   font-size: 14px;
   line-height: 50px;
+  -webkit-transition: all .1s ease;
   transition: all .1s ease;
 }
 .about:hover {
